--- a/Sistema de Gestion de Inventario Nuvéa/Vistas/Properties/Resources.resx
+++ b/Sistema de Gestion de Inventario Nuvéa/Vistas/Properties/Resources.resx
@@ -139,10 +139,13 @@
   <data name="profile_picture_user_icon_153847" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\profile_picture_user_icon_153847.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="1499345621-contact_85338" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1499345621-contact_85338.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="edit_icon_128873" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\edit_icon_128873.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="1499345621-contact_85338" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1499345621-contact_85338.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Rules_" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Rules_.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
